@@ -1,5 +1,10 @@
 2008-11-17  Benjamin Otte  <otte@gnome.org>
 
+	* daemon/gvfsbackendftp.c:
+	document what the workarounds do
+
+2008-11-17  Benjamin Otte  <otte@gnome.org>
+
 	* daemon/gvfsbackendftp.c: (ftp_connection_prepare),
 	(ftp_connection_use):
 	If feat before login fails, try it again after login. (fixes bug
